# docs/swagger.yaml
@@ -480,6 +480,52 @@ definitions:
       uptimeSeconds:
         type: integer
     type: object
+  github_com_MeshCore-Beacon_beacon-server_internal_api.ObserverActivity:
+    properties:
+      interval:
+        type: string
+      payloadTypes:
+        items:
+          $ref: '#/definitions/github_com_MeshCore-Beacon_beacon-server_internal_api.PayloadBreakdownItem'
+        type: array
+      points:
+        items:
+          $ref: '#/definitions/github_com_MeshCore-Beacon_beacon-server_internal_api.ObserverActivityPoint'
+        type: array
+      radio:
+        $ref: '#/definitions/github_com_MeshCore-Beacon_beacon-server_internal_api.ObserverActivityRadio'
+      range:
+        type: string
+    type: object
+  github_com_MeshCore-Beacon_beacon-server_internal_api.ObserverActivityPoint:
+    properties:
+      airtimeMs:
+        type: number
+      observations:
+        type: integer
+      rssiAvg:
+        type: number
+      snrAvg:
+        type: number
+      snrMin:
+        type: number
+      t:
+        description: bucket start, epoch ms
+        type: integer
+    type: object
+  github_com_MeshCore-Beacon_beacon-server_internal_api.ObserverActivityRadio:
+    properties:
+      bwKhz:
+        type: number
+      cr:
+        type: integer
+      freqMhz:
+        type: number
+      preambleSymbols:
+        type: integer
+      sf:
+        type: integer
+    type: object
   github_com_MeshCore-Beacon_beacon-server_internal_api.ObserverBroker:
     properties:
       lastPacketAt:
@@ -1737,6 +1783,45 @@ paths:
           schema:
             $ref: '#/definitions/internal_api_handlers.APIError'
       summary: Get observer detail
+      tags:
+      - Observers
+  /observers/{observerId}/activity:
+    get:
+      parameters:
+      - description: Observer UUID
+        in: path
+        name: observerId
+        required: true
+        type: string
+      - description: Trailing window as a Go duration, max 720h (default 24h); max
+          48h when interval is under 1h
+        in: query
+        name: range
+        type: string
+      - description: 'Bucket size: 5m, 15m, 1h, 6h or 24h (default 15m)'
+        in: query
+        name: interval
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/github_com_MeshCore-Beacon_beacon-server_internal_api.ObserverActivity'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/internal_api_handlers.APIError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/internal_api_handlers.APIError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/internal_api_handlers.APIError'
+      summary: Get observer heard-activity history
       tags:
       - Observers
   /observers/{observerId}/adverts:
